# BlockEpsilonTree

./: CMakeLists.txt  README.md  example.cpp
include/: BlockEpsilonTree.hpp  LABlock.hpp
include/block_tree/: BlockTree.h  HashString.h  RabinKarp.h
include/block_tree/blocks/: BackBlock.h  Block.h  InternalBlock.h  LeafBlock.h
include/la_vector/: piecewise_linear_model.hpp
